--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
-        </article>]
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis consequatur odio laborum dignissimos cum asperiores quibusdam magni sapiente quidem aspernatur! Hic minima saepe incidunt distinctio beatae vero quas reiciendis at!</p>
+        </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Python</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos adipisci nostrum quisquam hic, officiis pariatur laudantium ea quidem inventore sit porro fuga architecto similique aperiam. Qui perspiciatis voluptatibus beatae id!</p>
         </article>
     </main>
 
